@@ -16,6 +16,7 @@ export(path)
 export(port)
 export(scheme)
 export(suffix_extract)
+export(suffix_refresh)
 export(url_compose)
 export(url_decode)
 export(url_encode)
