@@ -8,12 +8,55 @@
 #' @keywords datasets
 #' @name suffix_dataset
 #'
-#' @seealso \code{\link{suffix_extract}} for extracting suffixes from domain names.
+#' @seealso \code{\link{suffix_extract}} for extracting suffixes from domain names,
+#' and \code{\link{suffix_refresh}} for getting a new, totally-up-to-date dataset
+#' version.
 #'
 #' @usage data(suffix_dataset)
 #' @note Last updated 2016-07-20.
-#' @format A vector of 7430 elements.
+#' @format A vector of 8020 elements.
 "suffix_dataset"
+
+#'@title Retrieve a public suffix dataset
+#'
+#'@description \code{urltools} comes with an inbuilt
+#'dataset of public suffixes, \code{\link{suffix_dataset}}.
+#'This is used in \code{\link{suffix_extract}} to identify the top-level domain
+#'within a particular domain name.
+#'
+#'While updates to the dataset will be included in each new package release,
+#'there's going to be a gap between changes to TLDs and changes to the package.
+#'Accordingly, the package also includes \code{suffix_refresh}, which generates
+#'and returns a \emph{fresh} version of the dataset. This can then be passed through
+#'to \code{\link{suffix_extract}}.
+#'
+#'@return a dataset equivalent in format to \code{\link{suffix_dataset}}.
+#'
+#'@seealso \code{\link{suffix_extract}} to extract suffixes from domain names,
+#'or \code{\link{suffix_dataset}} for the inbuilt, default version of the data.
+#'
+#'@examples
+#'\dontrun{
+#'new_suffixes <- suffix_refresh()
+#'}
+#'
+#'@export
+suffix_refresh <- function(){
+  
+  has_libcurl <- capabilities("libcurl")
+  if(length(has_libcurl) == 0 || has_libcurl == FALSE){
+    stop("libcurl support is needed for this function")
+  }
+  
+  #Read in and filter
+  connection <- url("https://www.publicsuffix.org/list/effective_tld_names.dat", method = "libcurl")
+  results <- readLines(connection)
+  close(connection)
+  suffix_dataset <- results[!grepl(x = results, pattern = "//", fixed = TRUE) & !results == ""]
+
+  #Return the user-friendly version
+  return(suffix_dataset)
+}
 
 #' @title extract the suffix from domain names
 #' @description domain names have suffixes - common endings that people
@@ -30,6 +73,11 @@
 #' or \code{\link{url_parse}}. Alternately, full URLs can be provided
 #' and will then be run through \code{\link{domain}} internally.
 #'
+#' @param suffixes a dataset of suffixes. By default, this is NULL and the function
+#' relies on \code{\link{suffix_dataset}}. Optionally, if you want more updated
+#' suffix data, you can provide the result of \code{\link{suffix_refresh}} for
+#' this parameter.
+#' 
 #' @return a data.frame of four columns, "host" "subdomain", "domain" & "suffix".
 #' "host" is what was passed in. "subdomain" is the subdomain of the suffix.
 #' "domain" contains the part of the domain name that came before the matched suffix.
@@ -47,12 +95,15 @@
 #' domain_name <- domain("http://en.wikipedia.org")
 #' suffix_extract(domain_name)
 #'
-#' #Using internal parsing
-#' suffix_extract("http://en.wikipedia.org")
-#'
+#' #Relying on a fresh version of the suffix dataset
+#' suffix_extract(domain("http://en.wikipedia.org"), suffix_refresh())
+#' 
 #' @importFrom triebeard trie longest_match
 #' @export
-suffix_extract <- function(domains){
+suffix_extract <- function(domains, suffixes = NULL){
+  if(!is.null(suffixes)){
+    suffix_load(suffixes)
+  }
   rev_domains <- reverse_strings(domains)
   matched_suffixes <- triebeard::longest_match(urltools_env$suff_trie, rev_domains)
   has_wildcard <- matched_suffixes %in% urltools_env$is_wildcard
@@ -73,4 +124,13 @@ suffix_extract <- function(domains){
 #' @note Last updated 2016-07-20.
 #' @format A vector of 1275 elements.
 "tld_dataset"
+
+get_tlds <- function(){
+  raw_tlds <- readLines("http://data.iana.org/TLD/tlds-alpha-by-domain.txt", warn = FALSE)
+  raw_tlds <- tolower(raw_tlds[!grepl(x = raw_tlds, pattern = "(#|--)")])
+  return(raw_tlds)
+}
+
+tld_extract <- function(){
+  
 }
